# meshapp

./: .gitignore  CHANGELOG.md  README.md  build-release.sh
.github/workflows/: release.yml
flutter/: analysis_options.yaml  pubspec.yaml
flutter/lib/: main.dart
flutter/linux/: CMakeLists.txt
flutter/linux/runner/: my_application.cc
flutter/test/: widget_test.dart
rust/: Cargo.toml  build.rs  build.sh
rust/src/: dm_crypto.rs  friends.rs  geo.rs  identity.rs  lib.rs  mentions.rs  optimization.rs  storage.rs  transport.rs
