[package]
name = "meshapp-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "meshapp_core"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
once_cell = "1.19"
snow = "0.10"
rusqlite = { version = "0.29", features = ["bundled"] }

